2011-XX-XX  Peter Schueller  <ps@kr.tuwien.ac.at>

	* TODO more details [rewrote model building according to [todo] paper: new dependency notion, evalgraph, evaluation heuristics, ...]
	* removed ruleml output builder as it most probably does not work correctly and could/should be done as a plugin
	* removed --reverse option as it was not implemented and not documented
	* removed --dlt option as it should be done as a plugin
	* renaming globals to config and removing singleton status (each ProgramCtx may have its own config if dlvhex is used as a library)
	* encapsulating input sources in InputProvider
	* removing singleton status of PluginContainer as API users might have different programs with different plugin containers
	* Logger component with log-levels, hierarchical indentation and NDEBUG-dependant logging
	* Printhelpers.hpp utilities for comfortable printing of various boost and STL containers
	* removed dependency on cppunit, now using the boost UTF
	* no longer enforcing dlv to be present as backend, it is now sufficient that one of the possible backends is present
	* evaluation heuristics selectable with --heuristics=...

2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Set error-limit to 5 for clang.
	* testsuite/Makefile.am: Likewise.

2010-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/BoostComponentFinder.cpp: Applied the nice part of the
	clang diff (the one that does not deal with a clang bug).
	* Modelbuilding-Concept.txt: Thoughts on online vs offline and
	projected vs non projected model building.

2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Temporary fix for iostreams configure check for
	boost versions >=1.44.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/dlvhex/Makefile.am: Highlight which header file belongs
	to which library.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.
