@@ -32,6 +32,7 @@
 #define INTERPRETATION_HPP_INCLUDED__08112010
 
 #include "dlvhex/PlatformDefinitions.h"
+#include "dlvhex/fwd.hpp"
 #include "dlvhex/ModelGenerator.hpp"
 #include "dlvhex/ID.hpp"
 
@@ -40,9 +41,6 @@
 #include <boost/shared_ptr.hpp>
 
 DLVHEX_NAMESPACE_BEGIN
-
-struct Registry;
-typedef boost::shared_ptr<Registry> RegistryPtr;
 
 class Interpretation:
   public InterpretationBase,
