@@ -490,11 +490,31 @@
 DLVHEX_NAMESPACE_BEGIN
 
 // forward declarations
-class NodeGraph;
-class OutputBuilder;
-
 class PluginRewriter;
 class PluginOptimizer;
+
+// callback functor for processing models generated by the model generator
+// setup these in setupProgramCtx()
+class ModelCallback:
+  public std::unary_function<bool, InterpretationPtr>
+{
+public:
+  virtual ~ModelCallback() {}
+  // returning true continues the model generation process
+  // returning false stops the model generation process (afterwards the final
+  virtual bool operator()(InterpretationPtr model) = 0;
+};
+typedef boost::shared_ptr<ModelCallback> ModelCallbackPtr;
+
+// callback functor for processing models generated by the model generator
+// setup these in setupProgramCtx()
+class FinalCallback
+{
+public:
+  virtual ~FinalCallback() {}
+  virtual void operator()() = 0;
+};
+typedef boost::shared_ptr<FinalCallback> FinalCallbackPtr;
 
 /**
  * \brief Converter class.
@@ -1049,15 +1069,6 @@ public:
      */
     virtual PluginOptimizer* 
     createOptimizer()
-    {
-      return 0;
-    }
-
-    /**
-     * creates an OutputBuilder
-     */
-    virtual OutputBuilder*
-    createOutputBuilder()
     {
       return 0;
     }
